cabal-version:      2.4
name:               widget-ui
version:            0.1.0.0
author:             Cosmin
maintainer:         tudor_cosmin98@yahoo.com
extra-source-files: README.md

executable widget-ui
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0, gloss
    hs-source-dirs:   app
    default-language: Haskell2010
